feat(release): P0/P1 백엔드 통합 반영